<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:weightSum="3"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

        <TextView
                android:text="@string/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_title"
                android:textSize="48sp"
                android:layout_weight="1"
                android:gravity="center" />

        <TextView
            android:id="@+id/main_random_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="34sp" />

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

            <LinearLayout
                android:layout_width="379dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/false_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/falseButton"
                    app:srcCompat="@drawable/icon_false" />

                <ImageButton
                    android:id="@+id/true_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/trueButton"
                    app:srcCompat="@drawable/icon_true" />
            </LinearLayout>

            <Button
                android:id="@+id/main_btn_randomize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingTop="16dp"
                android:paddingEnd="40dp"
                android:paddingBottom="16dp"
                android:text="@string/refresh_btn"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>